<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_bottom_page"
        tools:context="alektas.stroymat.ui.pricelist.ItemFragment">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/game_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:constraint_referenced_ids="item_img, item_name, item_release_label, game_release, item_platforms_label, item_platforms, item_description" />

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_item_details_img"
            android:adjustViewBounds="true"
            android:background="@color/colorSecondary"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_image_black_24dp" />

        <TextView
            android:id="@+id/item_name"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horiz_item_details_text"
            android:layout_marginTop="@dimen/margin_top_item_details_text"
            android:layout_marginEnd="@dimen/margin_horiz_item_details_text"
            android:text="@string/item_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_img" />

        <TextView
            android:id="@+id/item_release_label"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horiz_item_details_text"
            android:layout_marginTop="@dimen/margin_top_item_details_text"
            android:text="@string/release_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_name" />

        <TextView
            android:id="@+id/game_release"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horiz_item_details_text"
            android:text="@string/release_empty"
            app:layout_constraintBaseline_toBaselineOf="@id/item_release_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/item_platforms_label"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horiz_item_details_text"
            android:layout_marginTop="@dimen/margin_top_item_details_text"
            android:text="@string/platforms_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_release_label" />

        <TextView
            android:id="@+id/item_platforms"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="@dimen/margin_horiz_item_details_text"
            android:text="@string/platforms_empty"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@id/item_platforms_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/item_platforms_label" />

        <TextView
            android:id="@+id/item_description"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horiz_item_details_text"
            android:layout_marginEnd="@dimen/margin_horiz_item_details_text"
            android:layout_marginTop="@dimen/margin_top_item_details_description"
            android:text="@string/desciption_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_platforms"
            tools:text="@string/lorem" />

        <ProgressBar
            android:id="@+id/game_loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/item_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/item_img" />

        <TextView
            android:id="@+id/game_placeholder_text"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/item_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/item_img" />

        <TextView
            android:id="@+id/error_text"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/item_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/item_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>